# le-flash

./: Anchor.toml  Makefile  package.json
.github/workflows/: main.yml
app/: constant.ts  core.ts  index.ts  merkleDistributor.ts  utility.ts  utils.ts
programs/le-flash/: Cargo.toml
programs/le-flash/src/: constant.rs  errors.rs  lib.rs  traits.rs  utils.rs
programs/le-flash/src/instructions/: close_cheque.rs  deposit.rs  initialize_pool.rs  mod.rs  withdraw.rs  withdraw_nft.rs
programs/le-flash/src/instructions/merkle_distributor/: claim.rs  initialize_distributor.rs
programs/le-flash/src/schema/: cheque.rs  distributor.rs  mod.rs  pool.rs  receipt.rs
tests/: le-flash.ts
tests/pretest/: helper.ts
