[package]
name = "le-flash"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "le_flash"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = { version = "0.24.2", features = ["default"] }
num-traits = "0.2"
num-bigint = "0.4.3"
mpl-token-metadata = {version = "1.2.7", features = ["no-entrypoint"]}